force-app/main/default/objects/vlocity_ps__ContactFinancialStatement__c/vlocity_ps__ContactFinancialStatement__c.object-meta.xml
<CustomObject>
    <description>A point-in-time snapshot of a party&apos;s current financial situation including a full description of the party&apos;s income and expenses.For record type Income - money received, especially on a regular basis, for work or investments. For record type Expense - a cost incurred by a person or household, often on a repeating basis.</description>
    <label>Contact Financial Statement</label>
    <nameField>
        <label>Source</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Financial Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>