force-app/main/default/objects/vlocity_ps__ContactFinancialStatement__c/fields/vlocity_ps__Amount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Amount__c</fullName>
    <label>Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>