force-app/main/default/objects/vlocity_ps__ContactFinancialStatement__c/fields/vlocity_ps__AnnualAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AnnualAmount__c</fullName>
    <formula>vlocity_ps__QuarterlyAmount__c  * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>