force-app/main/default/objects/vlocity_ps__ContactFinancialStatement__c/fields/vlocity_ps__ContactEmploymentId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContactEmploymentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Employment Id</label>
    <referenceTo>vlocity_ps__ContactEmployment__c</referenceTo>
    <relationshipLabel>Contact Financial Statements</relationshipLabel>
    <relationshipName>ContactFinancialStatement</relationshipName>
    <type>Lookup</type>
</CustomField>