force-app/main/default/objects/vlocity_ps__ContactFinancialStatement__c/fields/vlocity_ps__EmployerName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__EmployerName__c</fullName>
    <formula>IF( ISNULL( vlocity_ps__ContactEmploymentId__r.vlocity_ps__EmployerId__r.Name) , vlocity_ps__ContactEmploymentId__r.Name, vlocity_ps__ContactEmploymentId__r.vlocity_ps__EmployerId__r.Name)</formula>
    <label>Employer Name</label>
    <type>Text</type>
</CustomField>