force-app/main/default/objects/vlocity_ps__ContactFinancialStatement__c/fields/vlocity_ps__Enddate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Enddate__c</fullName>
    <label>End date</label>
    <type>Date</type>
</CustomField>