force-app/main/default/objects/vlocity_ps__ContactFinancialStatement__c/fields/vlocity_ps__ExpenseName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ExpenseName__c</fullName>
    <formula>Name</formula>
    <label>Expense Name</label>
    <type>Text</type>
</CustomField>