force-app/main/default/objects/vlocity_ps__ContactFinancialStatement__c/fields/vlocity_ps__IsActive__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>