force-app/main/default/objects/vlocity_ps__ContactFinancialStatement__c/fields/vlocity_ps__MonthlyAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__MonthlyAmount__c</fullName>
    <formula>CASE( vlocity_ps__Frequency__c , &apos;Hourly&apos;, vlocity_ps__Amount__c  * 520/3, &apos;Daily&apos;,  vlocity_ps__Amount__c  * 5*52/12, &apos;Weekly&apos;, vlocity_ps__Amount__c  * 52/12, &apos;Bi-Weekly&apos;, vlocity_ps__Amount__c  * 26/12, &apos;Yearly&apos;, vlocity_ps__Amount__c  * 1/12, vlocity_ps__Amount__c )</formula>
    <label>Monthly Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>