force-app/main/default/objects/vlocity_ps__ContactFinancialStatement__c/fields/vlocity_ps__NextVerificationDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__NextVerificationDate__c</fullName>
    <label>Next Verification Date</label>
    <type>Date</type>
</CustomField>