force-app/main/default/objects/vlocity_ps__ContactFinancialStatement__c/fields/vlocity_ps__OtherType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OtherType__c</fullName>
    <label>Other Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>