force-app/main/default/objects/vlocity_ps__ContactFinancialStatement__c/fields/vlocity_ps__QuarterlyAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__QuarterlyAmount__c</fullName>
    <formula>vlocity_ps__MonthlyAmount__c  * 3</formula>
    <label>Quarterly Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>