force-app/main/default/objects/vlocity_ps__ContactFinancialStatement__c/fields/vlocity_ps__VerificationDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__VerificationDate__c</fullName>
    <label>Verification Date</label>
    <type>Date</type>
</CustomField>