force-app/main/default/objects/vlocity_ps__ContactFinancialStatement__c/recordTypes/vlocity_ps__Expense.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__Expense</fullName>
    <active>true</active>
    <label>Expense</label>
</RecordType>