force-app/main/default/objects/vlocity_ps__ContactFinancialStatement__c/recordTypes/vlocity_ps__Income.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__Income</fullName>
    <active>true</active>
    <label>Income</label>
</RecordType>